# semverc

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE.bazel  semver.c
lib/: BUILD.bazel
src/: BUILD.bazel
test/: BUILD.bazel  semver_test.c
